--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday Ade!">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -45,16 +45,16 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">,</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">D</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">E</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -137,7 +137,7 @@
 				<p>but...</p>
 				<p>don't worry</p>
 				<p>because...</p>
-				<p>God has your back</p>
+				<p>Allah has your back</p>
 				<p>and</p>
 				<p>this year will be better</p>
 				<p>and I hope</p>
@@ -150,7 +150,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>a very happy birthday Ade Kurnia Putri Tanjung</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
